# presm

./: .gitmodules  CMakeLists.txt  README.md  fpga_toolchain_build.py  presm_build.py  presm_execute.py  presm_verify.py  requirements.txt  utils.py
device/: CMakeLists.txt  device.cpp  memory.cpp
device/include/: assembler.h  device.h  memory.h
device/npu_onnx/: npu_onnx.cpp
device/npu_onnx/include/: npu_onnx.h
device/ptx_gpu_1/: CMakeLists.txt  ptx_gpu.cpp  ptx_gpu_1.cpp  ptx_gpu_asm.cpp
device/ptx_gpu_1/include/: ptx_gpu.h  ptx_gpu_1.h  ptx_gpu_asm.h
device/ptx_gpu_1/verilog_rtl/src/: playground.v  uart.v
device/riscv_accel/: CMakeLists.txt  riscv.cpp
device/riscv_accel/include/: riscv.h
device/verilog_rtl/iverilog_testbench/: uart_tb.v
device/verilog_rtl/physical_constraints/: device_tangnano20k.cst  playground_tangnano20k.cst
driver/c_accel/: CMakeLists.txt  driver_entrypoint.cpp
driver/c_accel/include/: driver_entrypoint.h
driver/cuda/: CMakeLists.txt  cuda_api.cpp  driver_entrypoint.cpp
driver/cuda/include/: driver_entrypoint.h
driver/onnx/: CMakeLists.txt  driver_entrypoint.cpp  onnx_api.cpp
driver/onnx/include/: driver_entrypoint.h
driver_device_if/include/: interface.h
fpga/: README.md
fpga/tangnano20k/: Makefile
include/: common.h
resources/compilers/: tutorials.md
resources/fpga/: tutorials.md
scripts/: build.py  execute.py  execute_verification_app.py  fpga_toolchain_build.py  utils.py  verify.py
verification/: CMakeLists.txt  app.cpp
verification/c_accel/: CMakeLists.txt  c_accel.cpp
verification/c_accel/include/: c_accel.h
verification/c_accel/sanity/: sanity.cpp  sanity_kernel.cpp  sanity_kernel.h
verification/cuda/: CMakeLists.txt  app.cpp  cuda_verification.cpp
verification/cuda/include/: app.h  cuda_verification.h
verification/cuda/sanity/: sanity.cpp
verification/cuda/vector_add/: add_func.cuh  vector_add.cpp  vector_add.cu
verification/include/: app.h
verification/onnx/: CMakeLists.txt  app.cpp
verification/onnx/include/: app.h
verification/onnx/sanity/: sanity.cpp
